<resources>
    <string name="app_name">Captions_translatAR</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="button_camera">Go!</string>
    <string name="radio_off">OFF</string>
    <string name="radio_on">ON</string>
    <string name="radio_text">American Sign Language:</string>
    <string name="radio_textCC">CC:</string>
    <string name="speechButtonText">Recognize Speech</string>
    <string-array name="LanguageIN">
        <item>English</item>
        <item>French</item>
        <item>German</item>
        <item>Filipino</item>
        <item>Portugese</item>
        <item>Cantonese</item>
    </string-array>
    <string-array name="LanguageOUT">
        <item>English</item>
        <item>French</item>
        <item>German</item>
        <item>Filipino</item>
        <item>Portugese</item>
        <item>Cantonese</item>
    </string-array>
    <string name="TranslateFrom">Translate From:</string>
    <string name="TranslateTo">Translate To:</string>
    <string name="title_activity_translatar">TranslatarActivity</string>
    <string name="main_page_tag_line">Tap to begin interpreting speech</string>
    <string name="milos_about_me">I am looking for opportunities in software engineering and data analytics roles. I am proficient in Python, Ruby, Java and have exposure to many tools and libraries like jupyter notebooks, numpy, pandas, matplotlib etc. In my free time I like to play soccer, ski, scuba dive and anything where I’m active, solving puzzles or making things.</string>
    <string name="milos_name">Milos Bijelic</string>
    <string name="brandon_name">Brandon Rufino</string>
    <string name="special_thanks">Special thanks to Arvin Angue and Justin Chau</string>

</resources>