<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <Button
        android:id="@+id/button2"
        android:layout_width="411dp"
        android:layout_height="81dp"
        android:layout_marginBottom="16dp"
        android:onClick="accessCamera"
        android:text="@string/button_camera"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/LanguageIN"
        android:layout_width="145dp"
        android:layout_height="51dp"
        android:layout_alignBaseline="@id/textView4"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_toRightOf="@id/textView4"
        android:drawSelectorOnTop="true"
        app:layout_constraintBottom_toTopOf="@+id/ClosedCaptions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView4" />

    <Spinner
        android:id="@+id/ClosedCaptions"
        android:layout_width="145dp"
        android:layout_height="51dp"
        android:layout_alignBaseline="@id/textView5"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_toRightOf="@id/textView5"
        android:drawSelectorOnTop="true"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView5" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radioGroup"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:checkedButton="@id/radio_pirates"
        android:orientation="horizontal"
        android:text="Hand Thing"
        app:layout_constraintBottom_toTopOf="@+id/button2">

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/radio_text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio_pirates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:padding="15dp"
            android:text="@string/radio_on"
            android:textStyle="bold"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radio_ninjas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:padding="15dp"
            android:text="@string/radio_off"
            android:textStyle="bold" />
    </RadioGroup>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radioGroupCC"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:checkedButton="@id/radio_piratesCC"
        android:orientation="horizontal"
        android:text="Closed Captions"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup">

        <TextView
            android:id="@+id/headerCC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/radio_textCC"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio_piratesCC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClickedCC"
            android:padding="15dp"
            android:text="ON"
            android:textStyle="bold"
            android:checked="true"
            />

        <RadioButton
            android:id="@+id/radio_ninjasCC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClickedCC"
            android:padding="15dp"
            android:text="OFF"
            android:textStyle="bold" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:text="@string/TranslateFrom"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/LanguageIN"
        app:layout_constraintEnd_toStartOf="@+id/LanguageIN"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:text="@string/TranslateTo"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/ClosedCaptions"
        app:layout_constraintEnd_toStartOf="@+id/ClosedCaptions"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="163dp"
        android:layout_height="123dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/LanguageIN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_action_name" />

</android.support.constraint.ConstraintLayout>